--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	
 	<groupId>net.sonic</groupId>
 	<artifactId>gsls</artifactId>
-	<version>0.2.0</version>
+	<version>0.2.1</version>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20160810</version><!-- <version>20140107</version> -->
+			<version>20160810</version>
 		</dependency>
 		<dependency>
 			<groupId>org.everit.json</groupId>
@@ -38,12 +38,12 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.7.0</version><!-- <version>0.6.0</version> -->
+			<version>0.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.9.7</version><!-- <version>2.8.1</version> -->
+			<version>2.9.7</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -53,12 +53,12 @@
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.54</version> <!-- <version>1.54</version> -->
+			<version>1.54</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.3.1</version> <!-- <version>1.2</version> -->
+			<version>1.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-daemon</groupId>
@@ -74,6 +74,11 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 		</dependency>
 	</dependencies>
 	
